Translation part 1